tidied up code and fixed a spacing bug on search form

--- a/src/profile.css
+++ b/src/profile.css
@@ -228,6 +228,8 @@ input:checked + .slider:before {
   width: 50%;
   height: 100%;
   background: #ef5350;
+  font-size: 22px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .main>.counter {
@@ -238,18 +240,19 @@ input:checked + .slider:before {
 }
 
 .main>.detail{
-  width:50px;
+  width: 100px;
   margin-top: -10px;
   margin-left: 400px;
   border: none;
+  font-size: 24;
 }
 
 .main>.details{
   border: 1px solid #607d8b;
   width: 200px;
-  margin-top: 10px;
-  margin-left: 325px;
-  font-size: 26px;
+  margin-top: 15px;
+  margin-left: 350px;
+  font-size: 34px;
   border: none;
   font-weight: bold;
 }
